--- a/build.gradle
+++ b/build.gradle
@@ -88,4 +88,18 @@ checkJavaApiSignature.dependsOn compileJava
 checkJavaApiSignature.dependsOn copyJavaApiSignature
 check.dependsOn checkJavaApiSignature
 
+checkstyleTest {
+    source = sourceSets.main.allJava.matching{
+        exclude '**/*'
+    }
+}
+
+// Enable HTML output of FindBugs too.
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
 // TODO: Add task for publishing.
